# data-science-toolkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  run_checks.sh
notebooks/: matching_example.ipynb
src/causal_inference/evaluation/: balance.py
src/causal_inference/matching/: greedy_matching.py  optimal_matching.py
src/causal_inference/visualization/: matching.py
tests/: test_evaluation.py  test_matching.py  test_optimal_matching.py  test_visualization.py
