[tool.poetry]
name = "data-science-toolkit"
version = "0.1.0"
description = ""
authors = ["cmcap24"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.7.1"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.1"
pre-commit = "^3.6.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
pandas-stubs = "^2.1.1.230928"
plotly = "^5.18.0"
jupyterlab = "^4.0.9"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
