[tool.poetry]
name = "data-science-toolkit"
version = "0.1.0"
description = ""
authors = ["cmcap24 <chris.capozzola@gmail.com>"]
readme = "README.md"
packages = [{ include = "causal_inference" }]

[tool.poetry.dependencies]
python = "^3.13"
llvmlite = "^0.44.0"
numba = "^0.61.0"
numpy = "2.1.3"
scipy = "^1.15.2"
pandas = "^2.2.3"
statsmodels = "^0.14.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
causalml = {version = "^0.15.3", allow-prereleases = true}
causaldata = "^0.1.5"
notebook = "^7.3.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pandas-stubs = "^2.2.3.241126"
types-seaborn = "^0.13.2.20250111"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
strict = true
ignore_missing_imports = true
